Merged revisions 1177331 via svnmerge from https://svn.apache.org/repos/asf/cxf/trunk
........
  r1177331 | dkulp | 2011-09-29 11:21:32 -0400 (Thu, 29 Sep 2011) | 1 line
  
  [CXF-3828] Fix some issues with URI handling in the tooling
........


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.4.x-fixes@1177334 13f79535-47bb-0310-9956-ffa450edef68